<?xml version="1.0"?>
<package format="3">
  <name>arduino_interface</name>
  <version>0.1.0</version>
  <description>Interface to connect Arduino and ROS 2</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

