<?xml version="1.0"?>
<package format="3">
  <name>motor_control</name>
  <version>0.0.1</version>
  <description>ROS 2 package for motor control using Dynamixel SDK and providing motor operation features</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

