<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waypoint</name>
  <version>0.0.0</version>
  <description>ROS 2 package for waypoint navigation</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <!-- ROS 2 의존성 -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend> <!-- 상태 퍼블리싱/구독을 위한 메시지 타입 -->

  <!-- 개발 및 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

